--- a/DataStructures2/DataStructures2/DataStructures2.vcxproj.filters
+++ b/DataStructures2/DataStructures2/DataStructures2.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="Stack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Queue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp">
