--- a/DataStructures2/DataStructures2/DataStructures2.vcxproj
+++ b/DataStructures2/DataStructures2/DataStructures2.vcxproj
@@ -110,6 +110,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="List.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Stack.h" />
   </ItemGroup>
